make appsettings read from environment variables

--- a/src/Postgres.Azure.Backup/appsettings.json
+++ b/src/Postgres.Azure.Backup/appsettings.json
@@ -6,18 +6,18 @@
     }
   },
   "AzureBlobStorage": {
-    "ConnectionString": "",
-    "ContainerName": ""
+    "ConnectionString": "${AZURE_BLOBS_CONNECTION}",
+    "ContainerName": "${AZURE_BLOBS_CONTAINER}"
   },
   "Backup": {
-    "RepeatInHours": 24,
-    "Host": "",
-    "Port": "",
-    "UserName": "",
-    "Password": "",
-    "BackupFilePath": "",
-    "Databases": [ "", "" ],
-    "PgDumpPath": ""
+    "RepeatInHours": "${BACKUP_REPEAT_IN_HOURS}",
+    "Host": "${HOST}",
+    "Port": "${PORT}",
+    "UserName": "${USER_NAME}",
+    "Password": "{PASSWORD}",
+    "BackupFilePath": "${BACKUP_FILE_PATH}",
+    "Databases": "${DATABASES}",
+    "PgDumpPath": "${PG_DUMP_PATH}"
   },
   "AllowedHosts": "*"
 }
